--- a/moviesGG.adoc
+++ b/moviesGG.adoc
@@ -92,13 +92,13 @@ First, let's define what we're recommending. If I really enjoy 70s-style acting 
 [source,cypher]
 ----
 MATCH (actor:Person)-[:ACTED_IN]->(seventies:Movie),(actor)-[:ACTED_IN]->(new:Movie)
-WHERE seventies.released > 1969 AND seventies.released < 1980 A
-ND new.released > 1979 new.released > 1999 //The Phantom Menace (1999) heralded the shift from film to digital
+WHERE seventies.released > 1969 AND seventies.released < 1980 
+AND new.released > 1979 new.released > 1999 //The Phantom Menace (1999) heralded the shift from film to digital
 RETURN DISTINCT new.title AS `Beyond the 70s`
 ----
 //table
 
-This query just scratches the surface. On a real database you might want to attempt the challenges posed by the linkk:Netflix Prize[http://www.netflixprize.com/], build a recommendation machine for movies not usually found on Netflix (and there are a lot of them), or add more data and explore. 
+This query just scratches the surface. On a real database you might want to attempt the challenges posed by the http://www.netflixprize.com/[Netflix Prize], build a recommendation machine for movies not usually found on Netflix (and there are a lot of them), or add more data and explore. 
 
 == References
 
