--- a/moviesGG.adoc
+++ b/moviesGG.adoc
@@ -125,9 +125,7 @@ or, in a more graphical form:
 
 [source,cypher]
 ----
-MATCH p = (actor:Person {name: "Tom Hanks"})-[:ACTED_IN]->(m)
-WITH m, actor
-MATCH (m)<-[:ACTED_IN]-(person:Person)
+MATCH p = (actor:Person {name: "Tom Hanks"})-[:ACTED_IN]->(m:Movie)<-[:ACTED_IN]-(person:Person)
 WHERE actor <> person
 RETURN p
 ----
@@ -147,7 +145,7 @@ or, in a more graphical form:
 
 [source,cypher]
 ----
-MATCH p = (actor:Person {name: "Tom Hanks" })-[:ACTED_IN]->(movie)
+MATCH p = (actor:Person {name: "Tom Hanks" })-[:ACTED_IN]->(movie:Movie)
 RETURN p
 ----
 //graph_result
