--- a/moviesGG.adoc
+++ b/moviesGG.adoc
@@ -66,7 +66,7 @@ LOAD CSV
 WITH HEADERS
 FROM "https://raw.githubusercontent.com/whatSocks/GG_Movies/master/acted_in.csv" AS line FIELDTERMINATOR '|'
 MATCH (p:Person {id: toInt(line.Person_id)}), (m:Movie {id: toInt(line.Movie_id)})
-MERGE (p)-[:ACTED_IN]-(m)
+MERGE (p)-[:ACTED_IN]->(m)
 ----
 
 Let's take a look at what we got:
