--- a/moviesGG.adoc
+++ b/moviesGG.adoc
@@ -3,7 +3,6 @@
 :author: Cristina
 :description: The GraphGist of the Movies Database
 
-== Table of Contents
 
 [[introduction]]
 == LOADCSV and the Neo Technology Movie Graph
@@ -162,6 +161,7 @@ Take a look at the link:https://github.com/kbastani/neo4j-movies-template[Neo4j 
 - http://www.neo4j.org/learn/cypher[Learn Cypher]
 - http://docs.neo4j.org/chunked/stable/cypherdoc-movie-database.html[The Movie Database]
 - http://jexp.de/blog/2014/06/using-load-csv-to-import-git-history-into-neo4j/[Using LOAD CSV]
+- http://www.markhneedham.com/blog/2014/06/28/neo4j-cypher-finding-movies-by-decade/[Neo4j: LOAD CSV – Processing hidden arrays in your CSV documents]
 - https://github.com/kbastani/neo4j-movies-template[Neo4j Movie Website Template]
 
 
